--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,7 +11,7 @@ body {
   margin: 0;
   font-family: "Poppins";
 }
-.overview {
+.home-details {
   background: #b9b9b9;
   height: 100px;
   padding: 5px;
