--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -192,8 +192,23 @@ div.error {
   margin-top: -10px;
   margin-left: 165px;
 }
-
-
+/* Footer */
+.footer {
+  background-color: #353535;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5%;
+  z-index: 1000;
+  background-image: url('https://res.cloudinary.com/djuqkjsl4/image/upload/v1698908449/CN_dchz50.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center; /* This line centers the background image */
+}
+.main-content {
+  padding-bottom: 5%; /* This is equal to the height of footer. Adjust if necessary. */
+}
 
 
 
