--- a/frontend/src/css/TaskForm.css
+++ b/frontend/src/css/TaskForm.css
@@ -1,43 +1,105 @@
-.taskform {
-  display: flex;
-  flex-direction: column; /* Stack items vertically */
-  background-color: #cccccc;
-  align-items: center; /* Align items horizontally to the center */
-  justify-content: center; /* Align items vertically to the center */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap');
+
+body {
+  font-family: "Poppins"
 }
 
-label, input {
-  margin-left: 20px;
+.create {
+  background-color: #353535;
+  padding: 40px;
+  border-radius: 5px;
+  max-width: 600px;
+  margin: 40px auto;
+  color: #fff;
 }
 
-input {
+.create h3 {
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.create label, 
+.create input, 
+.create select {
+  display: block;
+  width: 100%;
+}
+
+.create input, 
+.create select {
+  font-family: "Poppins";
   padding: 10px;
   margin-top: 10px;
   margin-bottom: 20px;
-  margin-left: 20px;
-  width: 20%;
   border: 1px solid #ddd;
   border-radius: 4px;
   box-sizing: border-box;
+  appearance: none;
+  background-color: #f1f1f1;
+  color: #333;
 }
 
-form button {
-  background: #333;
-  border: 0;
-  color: #fff;
-  padding: 10px;
-  margin-left: 20px;
-  width: min-content;
+.create button {
   font-family: "Poppins";
+  background-color: #353535;
+  border: 1px solid #fff;
+  color: #fff;
+  padding: 10px 20px;
   border-radius: 4px;
+  font-size: 16px;
   cursor: pointer;
+  margin-top: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  transition: background-color 0.3s;
 }
 
-div.error {
-  padding: 10px;
-  background: #ffefef;
-  border: 1px solid var(--error);
-  color: var(--error);
-  border-radius: 4px;
-  margin: 20px 0;
+.create button:hover {
+  background-color: #555;
 }
+
+.add-employee-btn {
+  background-color: #353535;
+  border: 1px solid #fff;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  transition: background-color 0.3s;
+}
+
+.add-employee-btn:hover {
+  background-color: #555;
+}
+
+/* Style for the symbols on the buttons */
+.symbol {
+  font-size: 18px;  /* Adjust size as needed */
+  font-weight: bold; /* Makes it bolder */
+  margin-right: 5px;  /* Space between the symbol and the text */
+}
+
+
+/* Description box */
+textarea {
+  font-family: "Poppins";
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 200px;  /* Adjust the height as needed */
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;  /* Allows users to resize the textarea vertically */
+  overflow-y: auto;  /* Ensures the scrollbar appears when content exceeds the height */
+  font-size: 16px;
+}
+
