--- a/frontend/src/css/Overview.css
+++ b/frontend/src/css/Overview.css
@@ -1,45 +1,149 @@
+
 .overview {
-    .priority-label {
-        margin-top: 10px;
-        height: 25px;
-        display: flex;
-        align-items: center;
-      }
-      
-      .priority-select {
-        margin-left: 50px;
-        width: 115px;
-        display: flex;
-      }
-      
-      .status-label {
-        margin-top: 10px;
-        display: flex;
-        align-items: center;
-      }
-      
-      .status-select {
-        margin-left: 54px;
-        width: 115px;
-      }
-      
-      .due-date-label {
-        margin-top: 10px;
-        height: 25px;
-        display: flex;
-        align-items: center;
-      }
-      
-      .date-select {
-        margin-top: 20px;
-        margin-left: 30px;
-        padding: 4px 4px;
-        width: inherit;
-      }
-      
-      .clear-button {
-        margin-top: 10px;
-        margin-left: 230px;
-      }
-      
+  .priority-label {
+      margin-top: 10px;
+      height: 25px;
+      display: flex;
+      align-items: center;
+    }
+        .priority-select {
+      margin-left: 50px;
+      width: 115px;
+      display: flex;
+    }
+    /* jbsdbdkfkbkfbjf */
+    .status-label {
+      margin-top: 10px;
+      display: flex;
+      align-items: center;
+    }
+    
+    .status-select {
+      margin-left: 54px;
+      width: 115px;
+    }
+    
+    .due-date-label {
+      margin-top: 10px;
+      height: 25px;
+      display: flex;
+      align-items: center;
+    }
+    
+    .date-select {
+      margin-top: 20px;
+      margin-left: 30px;
+      padding: 4px 4px;
+      width: inherit;
+    }
+    
+    .clear-button {
+      margin-top: 10px;
+      margin-left: 230px;
+    }
+    
+}
+
+.box-container {
+display: flex;
+justify-content: space-between;
+}
+.high-priority-box {
+background-color: #ffad99;
+}
+
+.low-priority-box {
+background-color: #adebad;
+}
+
+.medium-priority-box {
+background-color: #b3b3ff;
+}
+
+.box2 {
+width: 1300px; 
+height: 20px; 
+background-color: #e0e0e0; 
+border: 0px solid #000; 
+margin: 0px; 
+padding: 0px; 
+display: flex;
+font-size: 20px;
+
+}
+
+.box1 {
+width: 1300px; 
+height: 46px; 
+background-color: #e0e0e0;
+border: 0px solid #000000; 
+margin: 0px; 
+padding: 0px; 
+display: flex;
+font-size: 20px;
+
+}
+
+.box {
+width: 1278px; 
+height: 250px; 
+background-color: #f2f2f2; 
+border: 1px solid #000; 
+margin: 0px;
+padding: 10px; 
+display: flex;
+
+}
+
+.little-box {
+width: 300px; 
+height: 200px; 
+background-color: #f2f2f2;  
+border: 1px solid #000; 
+margin: 10px; 
+padding: 1px; 
+font-size: 13px;
+}
+
+.little-box1 {
+width: 180px; 
+height: 20px; 
+border: 1px solid #000; 
+margin: 4px; 
+padding: 10px;
+font-size: 15px;
+}
+
+.little-box2 {
+position: relative; 
+top: 0px; 
+left: 1160px; 
+width: 135px; 
+height: 20px; 
+background-color: #adebad; 
+border: 2px solid #101010;
+margin: 0px 0px; 
+padding: 1px; 
+font-size: 15px;
+}
+
+.task-box {
+  position: fixed;
+}
+
+.edit-button {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin: 10px;
+}
+
+.edit-button button {
+  background-color: #f58e08;
+  color: rgb(14, 1, 1);
+  padding: 10px 20px;
+  text-align: center;
+  border: 2px solid #101010;
+  font-size: 16px;
+  cursor: pointer;
 }
