--- a/frontend/src/css/Overview.css
+++ b/frontend/src/css/Overview.css
@@ -125,3 +125,23 @@ margin: 0px 0px;
 padding: 1px; 
 font-size: 15px;
 }
+.task-box {
+  position: fixed;
+}
+
+.edit-button {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin: 10px;
+}
+
+.edit-button button {
+  background-color: #f58e08;
+  color: rgb(14, 1, 1);
+  padding: 10px 20px;
+  text-align: center;
+  border: 2px solid #101010;
+  font-size: 16px;
+  cursor: pointer;
+}
