--- a/frontend/src/css/Navbar.css
+++ b/frontend/src/css/Navbar.css
@@ -1,6 +1,4 @@
 /* Navbar.css */
-
-/* Main navbar container */
 /* Main navbar container */
 .navbar {
   background-color: #353535;
@@ -84,23 +82,25 @@ button.menu:hover {
 
 /* Dropdown menu container */
 .dropdown-menu {
-  display: none; /* Hidden by default */
+  display: flex; /* Hidden by default */
   position: absolute; /* Positioning relative to the navbar */
   background-color: #353535; /* Same as navbar background */
-  min-width: 160px;
   top: 100%; /* Position right below the navbar */
   right: 0; /* Align with the right side of the navbar */
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  padding: 0.5rem 1rem;
 }
 
 /* Dropdown menu links */
 .dropdown-menu a {
   color: white;
-  padding: 12px 16px;
+  font-size: inherit;
+  padding: 0rem 1.5rem;
+  margin-bottom: 0.6rem;
   text-decoration: none;
   display: block;
-  text-align: left;
+  text-align: center;
 }
 
 /* Hover effect for dropdown menu links */
