--- a/frontend/src/css/TaskDetails.css
+++ b/frontend/src/css/TaskDetails.css
@@ -66,3 +66,10 @@
   margin-top: 80px; /* Adjust the value as needed */
 }
 
+.task-details .description .task-desc-text {
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
+  max-width: 100%; /* Adjust as needed */
+}
+
