--- a/frontend/src/css/Calendar.css
+++ b/frontend/src/css/Calendar.css
@@ -204,7 +204,7 @@
   background: #353535;
   border: 1px solid #fff;
   color: #fff;
-  padding: 2px 15px;
+  padding: 1.5% 10%;
   border-radius: 2px;
   font-size: small;
   cursor: pointer;
